--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groeneveld Site</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23667eea'/><text x='50' y='70' font-size='70' font-weight='bold' fill='white' text-anchor='middle' font-family='Arial, sans-serif'>G</text></svg>" type="image/svg+xml">
 </head>
 <body>
     <div class="container">
@@ -42,6 +43,6 @@
       <li>Push code to GitHub</li>
     </ul>
     <br>
-    <a class="github-btn" href="https://github.com/groeneveldwoodstock/GroeneveldSite" target="_blank">View on Github</a>
+    <a class="github-btn" href="#" target="_blank">View on Github</a>
 </div>
 </html>
