update link url

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
       <li>Push code to GitHub</li>
     </ul>
     <br>
-    <a class="github-btn" href="#" target="_blank">View on Github</a>
+    <a class="github-btn" href="https://github.com/groeneveldwoodstock/Groeneveld-Site" target="_blank">View on Github</a>
 </div>
 </html>
